--- a/week 3/index.html
+++ b/week 3/index.html
@@ -18,6 +18,7 @@
     </div>
 
     <!-- found-items should be implemented as a component -->
+    <div><h1>{{ searchHandler.error }}</h1></div>
     <found-items found-items="searchHandler.found" on-remove="searchHandler.removeItem(index)"></found-items>
 
     
